--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -4,7 +4,7 @@
   display: flex;
   min-width: 100%;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   color: $green;
 }
 
