--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,8 @@
   align-items: center;
   background-color: $black;
   min-height: 100vh;
-  padding: 0 15rem 0 15rem;
+  margin: 0;
+  padding: 0 10% 0 10%;
   font-size: $title-font-size;
 }
 
