--- a/src/assets/css/Cards.scss
+++ b/src/assets/css/Cards.scss
@@ -1,26 +1,28 @@
 @import './variables';
 
-.section-header {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.section-name {
-  flex-grow: 1;
-  color: $green;
-}
-
-.count {
-  align-self: center;
-  color: $green;
-  font-size: $body-font-size;
-}
-
 .cards {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 2rem;
+  width: 100%;
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0 1rem 0;
+  }
+  
+  .count {
+    align-self: center;
+    color: $green;
+    font-size: $body-font-size;
+  }
+  
+  .content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 2rem;
+  }
 }
