--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -4,5 +4,6 @@ $red: #eb524a;
 $green: #0bf872;
 $blue: #15bafc;
 
-$title-font-size: 1.85rem;
+$title-font-size: 1.728rem;
+$subtitle-font-size: 1rem;
 $body-font-size: 1.2rem;
