--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -6,10 +6,11 @@
   flex-direction: column;
   align-items: flex-start;
   color: $green;
+  padding-bottom: 1rem;
 }
 
 .name {
-    display: flex;
+  display: flex;
 }
 
 .prompt {
@@ -38,7 +39,27 @@
   padding-bottom: 0.5rem;
 }
 
-a {
+.tab {
+  display: flex;
+  align-items: center;
+  gap: 0;
+
+  p {
+    margin: 0;
+  }
+}
+
+.tab-name {
   color: $green;
   text-decoration: none;
+  font-size: $title-font-size;
+
+  &.mobile {
+    text-decoration: underline;
+  }
+}
+
+a {
+  text-decoration: none;
+  color: $green;
 }
