--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -7,3 +7,6 @@ $blue: #15bafc;
 $title-font-size: 1.728rem;
 $subtitle-font-size: 1rem;
 $body-font-size: 1.2rem;
+
+$gutter-size: 20%;
+$mobile-gutter-size: 5%;
