--- a/src/assets/css/Card.scss
+++ b/src/assets/css/Card.scss
@@ -7,20 +7,24 @@
   align-items: center;
   border-left: solid 2px;
   border-color: inherit;
-  padding: 0.5rem 0 0 1rem;
+  padding: 0.5rem 0 0.5rem 1rem;
   gap: 2.5rem;
-  padding-bottom: 1rem;
+  height: fit-content;
 
   &.mobile {
     border-left: none;
-    border-bottom: solid 2px $green;
-    padding-left: 0;
+    border-bottom: solid 2px;
+    border-color: inherit;
+    padding: 0 0 0.5rem 0;
   }
 }
 
 .text {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
 }
 
 .title {
@@ -31,14 +35,13 @@
 
 .subtitles {
   font-size: $subtitle-font-size;
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin: 0;
 }
 
 .body {
   font-size: $body-font-size;
   text-align: justify;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .links {
@@ -50,7 +53,7 @@
 .link {
   display: flex;
   font-size: $subtitle-font-size;
-  margin-bottom: 0;
+  margin: 0;
 
   a {
     text-decoration: underline;
@@ -59,15 +62,12 @@
 
 .image {
   width: 150px;
-  min-width: 150px;
   height: 150px;
   border: solid 1px;
   border-color: inherit;
-  align-self: center;
+  align-self: flex-end;
 
   &.mobile {
-    width: 100%;
-    height: auto;
-    margin-top: 0.5rem;
+    align-self: center;
   }
 }
