replaced border with hr and added sorting

--- a/src/assets/css/Card.scss
+++ b/src/assets/css/Card.scss
@@ -13,9 +13,7 @@
 
   &.mobile {
     border-left: none;
-    border-bottom: solid 2px;
-    border-color: inherit;
-    padding: 0 0 0.5rem 0;
+    padding: 0;
   }
 }
 
