--- a/src/assets/css/Cards.scss
+++ b/src/assets/css/Cards.scss
@@ -20,6 +20,16 @@
         width: 100%;
       }
     }
+
+    .dropdowns {
+      display: flex;
+      gap: 1rem;
+
+      &.mobile {
+        flex-direction: column;
+        width: 100%;
+      }
+    }
   }
 
   .count {
@@ -37,9 +47,15 @@
 
     &.mobile {
       gap: 1rem;
+    }
 
-      :last-child {
-        border: none;
+    .card-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      hr {
+        width: 100%;
       }
     }
   }
