--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,9 @@
 }
 
 body {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  margin: 0 1rem 0 1rem;
   background-color: $black;
   font-family: 'Fixedsys Excelsior';
 }
