--- a/src/App.scss
+++ b/src/App.scss
@@ -4,16 +4,17 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  max-width: 70rem;
   margin: 0;
 }
 
 .content {
   display: flex;
   flex-grow: 1;
-  padding: 0 $gutter-size 1rem $gutter-size;
+  padding-bottom: 1rem;
 
   &.mobile {
-    padding: 0 $mobile-gutter-size 1rem $mobile-gutter-size;
+    padding-bottom: 1rem;
   }
 }
 
