gave terminal max height

--- a/src/assets/css/Header.scss
+++ b/src/assets/css/Header.scss
@@ -7,9 +7,13 @@
   color: $green;
 }
 
-.name {
+.terminal {
   display: flex;
   font-size: $body-font-size;
+}
+
+.user {
+  max-height: 1.25rem;
 }
 
 .cli {
