reordered mobile options

--- a/src/assets/css/Cards.scss
+++ b/src/assets/css/Cards.scss
@@ -32,7 +32,7 @@
       gap: 1rem;
 
       &.mobile {
-        flex-direction: column-reverse;
+        flex-direction: column;
         width: 100%;
       }
     }
