--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,20 @@
 @use './assets/css/variables' as *;
 
-.app {
+.background {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+  left: 0;
+}
+
+.foreground {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   max-width: 70rem;
   margin: 0;
+  background-color: rgba($black, 0.9);
 }
 
 .content {
@@ -34,7 +43,7 @@ option {
 
 input {
   font-family: 'Fixedsys Excelsior';
-  background-color: $black;
+  background-color: rgba($black, 0);
   border: none;
   outline: none;
   font-size: $body-font-size;
