change font to good old dos

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@
 select {
   height: fit-content;
   background-color: $black;
-  font-family: 'Fixedsys Excelsior';
+  font-family: 'Good Old DOS';
   font-size: $body-font-size;
   border: solid 1px;
   border-color: inherit;
@@ -38,11 +38,11 @@ select {
 }
 
 option {
-  font-family: 'Fixedsys Excelsior';
+  font-family: 'Good Old DOS';
 }
 
 input {
-  font-family: 'Fixedsys Excelsior';
+  font-family: 'Good Old DOS';
   background-color: rgba($black, 0);
   border: none;
   outline: none;
